samples/_failures_safe/1761648824_5a042d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fb12443.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9fb12443.c:157:40: error: missing terminating ' character
  157 |         tokens[token_count].value[1] = '\
      |                                        ^~
./samples/SAFE/__tmp_9fb12443.c:157:9: error: expected expression at end of input
  157 |         tokens[token_count].value[1] = '\
      |         ^~~~~~
./samples/SAFE/__tmp_9fb12443.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fb12443.c:157:9: error: expected declaration or statement at end of input
